<resources>
    <string name="app_name">personal-expense-management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chaomungbantrolai">Chào mừng bạn\ntrở lại!</string>
    <string name="subtitlelogin">Tiếp tục quản lý và kiểm soát tài chính của bạn với sự tiện lợi và sáng tạo</string>
    <string name="loginwithgoogle">Đăng nhập với Google</string>
    <string name="ignoreandexplorer">Bỏ qua và khám phá ngay</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="thevisa1">Thẻ Visa 1</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="chuyentien">Chuyển tiền</string>
    <string name="sodutaikhoan">Số dư tài khoản</string>
    <string name="thunhap">Thu nhập</string>
    <string name="chitieu">Chi tiêu</string>
    <string name="hoatdongganday">Hoạt động gần đây</string>
    <string name="taotaikhoanmoi">Tạo tài khoản mới</string>
    <string name="loaitaikhoan">Loại tài khoản</string>
    <string name="tienmat">Tiền mặt</string>
    <string name="tenthe">Tên thẻ</string>
    <string name="sothe">Số thẻ</string>
    <string name="nhapsothe">Nhập số thẻ</string>
    <string name="ngayhethan">Ngày hết hạn</string>
    <string name="sotienhienco">Số tiền hiện có</string>
    <string name="nhapsotienhienco">Nhập số tiền hiện có</string>
    <string name="danhmuc">Danh mục</string>
    <string name="taodanhmucmoi">Tạo danh mục mới</string>
    <string name="chondanhmuc">Chọn danh mục</string>
    <string name="donvitiente">Đơn vị tiền tệ</string>
    <string name="ngonngu">Ngôn ngữ</string>
    <string name="khoanvay">Khoản vay</string>
    <string name="vay">Vay</string>
    <string name="chovay">Cho vay</string>
    <string name="taokhoanvaymoi">Tạo khoản vay mới</string>
    <string name="vaytienmuaxe">Vay tiền mua xe</string>
    <string name="tiengoc">Tiền gốc:</string>
    <string name="nguoivay">Người vay</string>
    <string name="ngay">Ngày</string>
    <string name="gio">Giờ</string>
    <string name="thoigianthanhtoan">Thời hạn thanh toán</string>
    <string name="laisuat">Lãi suất</string>
    <string name="cachtinh">Cách tính</string>
    <string name="theonogoc">Theo dư nợ gốc</string>
    <string name="thoihan">Thời hạn</string>
    <string name="themdanhmuc">Thêm danh mục</string>
    <string name="tendanhmuc">Tên danh mục</string>
    <string name="mausac">Màu sắc</string>
    <string name="bieutuong">Biểu tượng</string>
    <string name="thu">Thu</string>
    <string name="chi">Chi</string>
    <string name="cahai">Cả hai</string>
    <string name="luudanhmuc">Lưu danh mục</string>
    <string name="themkhoanvay">Thêm khoản vay</string>
    <string name="loaigiaodich">Loại giao dịch</string>
    <string name="tennguoivay">Tên người vay</string>
    <string name="nhaptennguoivay">Nhập tên người vay</string>
    <string name="sotien">Số tiền</string>
    <string name="nhapsotienchovay">Nhập số tiền cho vay</string>
    <string name="ghichu">Ghi chú</string>
    <string name="nhapghichu">Nhập ghi chú</string>
    <string name="ngaygiaodich">Ngày giao dịch</string>
    <string name="bamdechonngaygiaodich">Bấm để chọn ngày giao dịch</string>
    <string name="thoigiangiaodich">Thời gian giao dịch</string>
    <string name="bamdechonthoigian">Bấm để chọn thời gian</string>
    <string name="thoihanvay">Thời hạn vay</string>
    <string name="bamdechonthoihanvay">Bấm để chọn thời hạn vay</string>
    <string name="denhanthanhtoanvao">Đến hạn thanh toán vào</string>
    <string name="colaisuat">Có lãi suất</string>
    <string name="dunogoc">Dư nợ gốc</string>
    <string name="dunogiamdan">Dư nợ giảm dần</string>
    <string name="nhaplaisuatkhoanvay">Nhập lãi suất khoản vay</string>
    <string name="luu">Lưu</string>
    <string name="themvitien">Thêm ví tiền</string>
    <string name="tenvitien">Tên ví tiền</string>
</resources>