<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.loan.NewLoanActivity">

    <com.google.android.material.appbar.MaterialToolbar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:navigationIconTint="@color/secondary40">

        <ImageButton
            android:id="@+id/btn_Back"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/white"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_left"
            app:tint="@color/secondary40" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themkhoanvay"
            android:textColor="@color/primary40"
            android:textSize="24sp"
            android:textFontWeight="700"
            android:textAlignment="center"
            android:layout_marginRight="30dp"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:textColor="@color/secondary20"
                android:text="@string/loaigiaodich"
                android:layout_marginBottom="10dp"/>
            <RadioGroup
                android:id="@+id/typeRG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/borrowRadioBtn"
                android:layout_marginBottom="30dp">
                <RadioButton
                    android:id="@+id/borrowRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@android:color/transparent"
                    android:textAlignment="center"
                    android:text="@string/vay"
                    android:textFontWeight="600"
                    android:textColor="@drawable/radio_button_text_selector"
                    android:background="@drawable/radio_button_bg_selector"
                    android:paddingHorizontal="24dp"
                    android:layout_marginRight="10dp"/>
                <RadioButton
                    android:id="@+id/lendRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@android:color/transparent"
                    android:textAlignment="center"
                    android:text="@string/chovay"
                    android:textFontWeight="600"
                    android:textColor="@drawable/radio_button_text_selector"
                    android:background="@drawable/radio_button_bg_selector"
                    android:paddingHorizontal="24dp"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:textColor="@color/secondary20"
                android:text="@string/tennguoivay"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/nhaptennguoivay"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/borrowerNameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textFontWeight="400"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:textColor="@color/secondary20"
                android:text="@string/sotien"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/nhapsotienchovay"
                app:suffixText="₫"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amountEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textFontWeight="400"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:textColor="@color/secondary20"
                android:text="@string/ghichu"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/nhapghichu"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/noteEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textFontWeight="400"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:textColor="@color/secondary20"
                android:text="@string/ngaygiaodich"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:endIconDrawable="@drawable/ic_date_picker"
                app:endIconMode="custom"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:hint="@string/bamdechonngaygiaodich"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:textColor="@color/secondary20"
                android:text="@string/thoigiangiaodich"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:endIconDrawable="@drawable/ic_time_picker"
                app:endIconMode="custom"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:hint="@string/bamdechonthoigian"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:textColor="@color/secondary20"
                android:text="@string/thoihanvay"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconDrawable="@drawable/ic_arrow_down"
                app:endIconMode="custom"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/periodEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:hint="@string/bamdechonthoihanvay"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/deadlineLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/denhanthanhtoanvao"/>
                <TextView
                    android:id="@+id/deadlineTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20/11/2024"
                    android:textColor="@color/primary40"/>
            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/interestRateSwitch"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:padding="20dp"
                android:background="@drawable/background_color_secondary80_outline"
                android:text="@string/colaisuat"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:checked="false"
                style="@style/Theme.Switch"/>

            <LinearLayout
                android:id="@+id/interestRateLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textFontWeight="600"
                    android:textSize="16sp"
                    android:textColor="@color/secondary20"
                    android:text="@string/cachtinh"
                    android:layout_marginBottom="10dp"/>
                <RadioGroup
                    android:id="@+id/interestRateTypeRG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@id/principalRadioBtn"
                    android:layout_marginBottom="30dp">
                    <RadioButton
                        android:id="@+id/principalRadioBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@android:color/transparent"
                        android:textAlignment="center"
                        android:text="@string/dunogoc"
                        android:textFontWeight="600"
                        android:textColor="@drawable/radio_button_text_selector"
                        android:background="@drawable/radio_button_bg_selector"
                        android:paddingHorizontal="24dp"
                        android:layout_marginRight="10dp"/>
                    <RadioButton
                        android:id="@+id/amortizedRadioBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@android:color/transparent"
                        android:textAlignment="center"
                        android:text="@string/dunogiamdan"
                        android:textFontWeight="600"
                        android:textColor="@drawable/radio_button_text_selector"
                        android:background="@drawable/radio_button_bg_selector"
                        android:paddingHorizontal="24dp"/>
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textFontWeight="600"
                    android:textSize="16sp"
                    android:textColor="@color/secondary20"
                    android:text="@string/laisuat"
                    android:layout_marginBottom="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/nhaplaisuatkhoanvay"
                    app:suffixText="%/năm"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/interestRateEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textFontWeight="400"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/luu"
                android:textSize="20sp"
                android:textFontWeight="700"
                app:backgroundTint="@null"
                android:background="@drawable/custom_button_bg"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>