<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.account.AddAccountActivity">

    <com.google.android.material.appbar.MaterialToolbar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:navigationIconTint="@color/secondary40">

        <ImageButton
            android:id="@+id/btn_Back"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/white"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_left"
            app:tint="@color/secondary40" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Thêm tài khoản"
            android:textColor="@color/primary40"
            android:textSize="24sp"
            android:textFontWeight="700"
            android:textAlignment="center"
            android:layout_marginRight="30dp"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/loaitaikhoan"
                android:textColor="@color/secondary20"
                android:textFontWeight="600"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/account_type_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/secondary80_bg"
                android:clickable="true"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_money_2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/account_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tienmat"
                    android:textColor="@color/secondary20"
                    android:textFontWeight="600"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/logo"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/wallet_layout"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/wallet_bg" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="30dp">

                    <TextView
                        android:id="@+id/tvBalanceWallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="18,000,000₫"
                        android:textColor="@color/white"
                        android:textFontWeight="700"
                        android:textSize="32sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/labelBalanceWallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sodutaikhoan"
                        android:textColor="@color/white"
                        android:textFontWeight="700"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@id/tvBalanceWallet"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/cardLayout"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/card_bg" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="30dp">

                    <TextView
                        android:id="@+id/labelBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sodutaikhoan"
                        android:textColor="@color/white"
                        android:textFontWeight="700"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="18,000,000₫"
                        android:textColor="@color/white"
                        android:textFontWeight="700"
                        android:textSize="32sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/labelBalance" />

                    <TextView
                        android:id="@+id/tvExpiryDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="01/25"
                        android:textColor="@color/white"
                        android:textFontWeight="700"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tvAccountId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="**** **** **** 1268"
                        android:textColor="@color/white"
                        android:textFontWeight="700"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@id/tvExpiryDate"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/visa_logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/cardFormSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tenthe"
                    android:textColor="@color/secondary20"
                    android:textFontWeight="600"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nhập tên thẻ"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/accountNameEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textFontWeight="400" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/sothe"
                    android:textColor="@color/secondary20"
                    android:textFontWeight="600"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nhapsothe"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/accountIdEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textFontWeight="400" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ngayhethan"
                    android:textColor="@color/secondary20"
                    android:textFontWeight="600"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:endIconDrawable="@drawable/ic_date_picker"
                    app:endIconMode="custom"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/expiryDateEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="Bấm để chọn ngày hết hạn"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/sotienhienco"
                android:textColor="@color/secondary20"
                android:textFontWeight="600"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nhapsotienhienco"
                app:errorEnabled="true"
                app:suffixText="₫">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/balanceEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textFontWeight="400" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_bg"
                android:padding="8dp"
                android:text="@string/taotaikhoanmoi"
                android:textFontWeight="700"
                android:textSize="20sp"
                app:backgroundTint="@null" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>